--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,15 @@
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-azure-store</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-pgvector-store-spring-boot-starter</artifactId>
+		</dependency>
   </dependencies>
 
   <repositories>
